src/objects/Interconnection_Payment__c.object
<CustomObject>
    <description>Payments for Interconnection Service Agreements</description>
    <fields>
        <fullName>IX_Payment_Type__c</fullName>
        <label>IX Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>25percent</fullName>
                    <label>25%</label>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Payment Plan 1</fullName>
                </value>
                <value>
                    <fullName>Payment Plan 2</fullName>
                </value>
                <value>
                    <fullName>Payment Plan 3</fullName>
                </value>
                <value>
                    <fullName>Payment Plan 4</fullName>
                </value>
                <value>
                    <fullName>Payment Plan 5</fullName>
                </value>
                <value>
                    <fullName>Payment Plan 6</fullName>
                </value>
                <value>
                    <fullName>Payment Plan 7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interconnection_Agreement__c</fullName>
        <label>Interconnection Agreement</label>
        <referenceTo>Interconnection_Agreement__c</referenceTo>
        <relationshipLabel>Interconnection Payments</relationshipLabel>
        <relationshipName>Interconnection_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Due__c</fullName>
        <label>Payment Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Sent__c</fullName>
        <label>Payment Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X30_BD_Final_Deadline__c</fullName>
        <label>30 BD Final Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X30_BD_Notice_Received__c</fullName>
        <label>30 BD Notice Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X30_BD_Sent__c</fullName>
        <label>30 BD Sent</label>
        <type>Date</type>
    </fields>
    <label>Interconnection Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IXPmt-{0}</displayFormat>
        <label>Interconnection Payment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interconnection Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>